# odd-platform-api/src/main/java/org/opendatadiscovery/oddplatform/integration/IntegrationDto.java
@@ -1,0 +1,4 @@
+package org.opendatadiscovery.oddplatform.integration;
+
+public record IntegrationDto(String id, String name, String synopsis) {
+}
