# odd-platform-api/src/main/java/org/opendatadiscovery/oddplatform/integration/IntegrationOverviewDto.java
@@ -1,0 +1,4 @@
+package org.opendatadiscovery.oddplatform.integration;
+
+public record IntegrationOverviewDto(IntegrationDto integration, String description) {
+}
